--- a/.vitepress/plugins/markdown-it/github/styles.css
+++ b/.vitepress/plugins/markdown-it/github/styles.css
@@ -1,12 +1,13 @@
 .github-source {
   border: 1px solid var(--vp-c-divider);
   border-radius: 8px;
-  background-color: #191919;
+  background-color: #242529;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 
   .meta {
     border-radius: 8px;
     padding: 0.5em 1em;
-    background-color: #1f1f1f;
+    background-color: var(--vp-c-black);
     border-bottom: 1px solid var(--vp-c-divider);
     font-size: 0.8em;
     color: #666 !important;
