--- a/.vitepress/theme/styles/theme.css
+++ b/.vitepress/theme/styles/theme.css
@@ -571,6 +571,6 @@
   --vp-local-search-highlight-text: var(--vp-c-neutral-inverse);
 }
 
-.language-md {
+.vp-adaptive-theme {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
