feat: display line number
feat: display line number

--- a/.vitepress/plugins/markdown-it/github/styles.css
+++ b/.vitepress/plugins/markdown-it/github/styles.css
@@ -28,5 +28,10 @@
     overflow-x: auto;
     font-size: 0.9em;
     line-height: 1.5;
+
+    .line-number {
+      user-select: none;
+      padding-right: 1em;
+    }
   }
 }
