--- a/.vitepress/plugins/markdown-it/github/styles.css
+++ b/.vitepress/plugins/markdown-it/github/styles.css
@@ -3,6 +3,7 @@
   border-radius: 8px;
   background-color: var(--vp-code-block-bg);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  margin: 12px 0;
 
   .meta {
     border-radius: 8px;
